add product search

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "product-visibility-validator",
+  "name": "oh-see-products",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
